# inf2004-labtest-2024

./: CMakeLists.txt  Question.txt  README.md  functions.c  functions.h  main.c
